// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KCButton sizes renders lg size 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1A3A52",
      "borderRadius": 10,
      "flexDirection": "row",
      "gap": 8,
      "height": 54,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Lexend_500Medium",
        },
        {
          "color": "#FFFCF7",
        },
        {
          "fontSize": 17,
        },
      ]
    }
  >
    Large
  </Text>
</View>
`;

exports[`KCButton sizes renders md size 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1A3A52",
      "borderRadius": 10,
      "flexDirection": "row",
      "gap": 8,
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 18,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Lexend_500Medium",
        },
        {
          "color": "#FFFCF7",
        },
        {
          "fontSize": 15,
        },
      ]
    }
  >
    Medium
  </Text>
</View>
`;

exports[`KCButton sizes renders sm size 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1A3A52",
      "borderRadius": 10,
      "flexDirection": "row",
      "gap": 8,
      "height": 36,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 12,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Lexend_500Medium",
        },
        {
          "color": "#FFFCF7",
        },
        {
          "fontSize": 13,
        },
      ]
    }
  >
    Small
  </Text>
</View>
`;

exports[`KCButton variants renders danger variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F7E5DF",
      "borderColor": "#B14A2F",
      "borderRadius": 10,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 8,
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 18,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Lexend_500Medium",
        },
        {
          "color": "#B14A2F",
        },
        {
          "fontSize": 15,
        },
      ]
    }
  >
    Delete
  </Text>
</View>
`;

exports[`KCButton variants renders ghost variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 10,
      "flexDirection": "row",
      "gap": 8,
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 18,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Lexend_500Medium",
        },
        {
          "color": "#1A3A52",
        },
        {
          "fontSize": 15,
        },
      ]
    }
  >
    Skip
  </Text>
</View>
`;

exports[`KCButton variants renders primary variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1A3A52",
      "borderRadius": 10,
      "flexDirection": "row",
      "gap": 8,
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 18,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Lexend_500Medium",
        },
        {
          "color": "#FFFCF7",
        },
        {
          "fontSize": 15,
        },
      ]
    }
  >
    Login
  </Text>
</View>
`;

exports[`KCButton variants renders secondary variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#EDE3CD",
      "borderRadius": 10,
      "borderWidth": 1.5,
      "flexDirection": "row",
      "gap": 8,
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 18,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Lexend_500Medium",
        },
        {
          "color": "#1B1006",
        },
        {
          "fontSize": 15,
        },
      ]
    }
  >
    Cancel
  </Text>
</View>
`;
